# kron-os-1.0.0

./: .gitignore  LICENSE  README.md  fix.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
kron/: config.json  fix.sh  meson.build
kron/compositor/: animation.c  animation.h  input.c  input.h  main.c  output.c  output.h  server.c  server.h  toplevel.c  toplevel.h
kron/data/: kron.desktop  style.css
kron/protocols/: wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml
kron/shell/: desktop.c  desktop.h  dock.c  dock.h  launcher.c  launcher.h  main.c  notifications.c  notifications.h  panel.c  panel.h  taskbar.c  taskbar.h
website/: app.js  index.html  style.css
